--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -149,10 +147,10 @@ body {
 }
 
 .card .user i {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 .card .content {
@@ -491,57 +489,55 @@ pre.prettyprint {
     text-align: center;
 }
 
-.btn-bottom-right
-{ 
-    position: fixed; 
-    bottom: 25px; 
-    right: 15px; 
+.btn-bottom-right {
+    position: fixed;
+    bottom: 25px;
+    right: 15px;
 }
 
 .btn-top-right {
-    position: fixed; 
-    top: 60px; 
-    right: 15px; 
+    position: fixed;
+    top: 60px;
+    right: 15px;
 }
 
-.badge-bottom-right
-{ 
-    position: fixed; 
-    bottom: 3px; 
-    right: 20px; 
+.badge-bottom-right {
+    position: fixed;
+    bottom: 3px;
+    right: 20px;
 }
+
 .btn-circle.btn-xl {
-  width: 70px;
-  height: 70px;
-  padding: 10px 16px;
-  font-size: 24px;
-  line-height: 1.33;
-  border-radius: 35px;
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
 }
 
 header {
     text-align: center;
     color: #fff;
     background: #18bc9c;
-
     position: fixed;
-    width:100%;
+    width: 100%;
     z-index: 1;
     height: 100%;
     overflow: hidden;
     top: 0;
     left: 0;
 }
+
 header .container {
     padding-top: 150px;
     padding-bottom: 50px;
 }
 
-
 header .intro-text .name {
     display: block;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 2em;
     font-weight: 700;
 }
@@ -551,24 +547,15 @@ header .intro-text .skills {
     font-weight: 300;
 }
 
-.content-wrapper{
+.content-wrapper {
     background-color: white;
     top: 100%;
     min-height: 12%;
-    position:absolute;
+    position: absolute;
     z-index: 2;
-    width: 100%;    
+    width: 100%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
+.modal-dialog {
+    top: 60px
+}
